[#2326] fix bug main content flicker and responsive design

--- a/app/assets/stylesheets/responsive.css.scss
+++ b/app/assets/stylesheets/responsive.css.scss
@@ -1,176 +1,23 @@
-.row-fluid .span22 {
-  margin-left: 10px;
-  width: 93.5%;
-}
-
 @media (min-width: 1200px) { 
-  .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
+  .container {
     width: 970px;
   }
-  .span5 {
-    width: 170px;
+  .sidebar {
+    width: 20%;
   }
-  .span19 {
-    width: 770px;
-  } 
-  .span14, .controller-account .container .main{
-    width: 600px;
-  }
-  .span24{
-    width: 600px;
-    margin: 0 auto;
-    float: none;    
-  }
-  .span8 {
-    width: 150px;
-  }
-  
-  #attributes .span8{
-    width: 290px;
-  }
-  
-  .row-fluid .span22{
-    width: 93.56118%;  
-  }
-  
-}
-
-/* Portrait tablet to landscape and desktop */
-@media  (max-width: 979px) { 
-  body{
-    padding-top: 0px;
+  .sidebar+div {
+    width: 80%;
   }
 }
 
-@media (max-width: 979px) and (min-width: 768px){
-  .span19 {
-    width: 100%;
+@media (min-width: 992px) { 
+  .container {
+    width: 970px;
   }
-  .span5 {
-    width: 100%;
+  .sidebar {
+    width: 20%;
   }
-  [class*="span"] {
-    margin-left: 0px;
-  }
-  .row {
-    margin-left: 0px;
-  }
-  .span24{
-    width: 400px;
-    margin: 0 auto;
-    float: none;    
-  }  
-  .span14, .controller-account .container .main{
-    width: 400px;
-  }  
-  .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container{
-    width: 724px;
-  }
-  
-  .sidebar #watchers h5 a.button, .sidebar .project-info  .member h5 a.button{
-    padding: 1px 3px;
-    font-size:10px;
-  }
-  
-  .row-fluid .span12 {
-    width: 99.3188%;
-  }
-  
-  .row-fluid .span6 {
-    width: 40.9782%;
-  }
-  
-  .row-fluid .span4 {
-    width: 100px;
-  }
-  
-  .issue-header .span8{
-    width: 250px;
-  }
-
-}
-
-@media  (max-width: 768px) { 
-  .member li{
-    float: left;
-    width: 60px;
-  }
-  ul, ol{
-    margin:0 0 10px 20px;
-  }
-  h2{
-    line-height:24px;
-  }
-  .issue-header{
-    margin: 0px 0px 16px 0px; 
-  }
-  
-  .span14, .controller-account .container .main{
-    width: auto;
-  }
-  
-  .issue-list .issue-item [class*="span"]{
-    float:left;
-  }
-
-  .issue-list .issue-item  .span14{
-    width: 90%;
-  }
-  .issue-list .issue-item  .span4{
-    width: 45%;    
-  }
-
-  .issue-list .issue-item  .span5{
-    width: 45%;    
-  }
-  
-  .issue-list .issue-item  .span2{
-    width: 5%;
-  }  
-  
-  .issue-list .issue-item .journal a .span17{
-    width: 55%;        
-  }
-  
-  .sidebar .project-info .basic-info h5{
-    width: 80%;
-    float:left;
-    font-weight: bold;
-  }
-  
-  .sidebar .project-info .basic-info .actions{
-    width: 10%;
-    float:right;    
-  } 
-  
-  .modal{
-    max-height: 380px;
-    overflow-y: auto;   
-    width: auto;   
-  }  
-  
-  .issue-list .issue-item .journal a .avatar{
-    margin-right: 10px;
-  }
-  
-  .journal .span14{
+  .sidebar+div {
     width: 80%;
   }
-  
-  .main{
-    padding: 10px;
-  }
-  
-  .issue-header h2 {
-    margin-right: 20px;
-  }
-  
-  .issue-list .issue-item .journal a .avatar{
-    margin-right: 0px;
-  }
-  
-  .row-fluid .span22{
-    width: 80%;
-  }
-  
 }
